activite/histoire/outil/release/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> calc
Rule 1     calc -> exp
Rule 2     exp -> ADD modify
Rule 3     exp -> DELETE fact2
Rule 4     exp -> DELETE RULES numlist
Rule 5     numlist -> NUM numlist
Rule 6     numlist -> <empty>
Rule 7     exp -> CHECK logalg
Rule 8     exp -> DISPLAY logalg
Rule 9     exp -> CHECK RULES
Rule 10    exp -> CHECK LINKS
Rule 11    exp -> CHECK NODES
Rule 12    modify -> fact
Rule 13    modify -> rule
Rule 14    fact -> ENT ENT ENT
Rule 15    fact -> NOT ENT ENT ENT
Rule 16    fact -> ENT NOT ENT ENT
Rule 17    fact -> ENT ENT NOT ENT
Rule 18    fact -> ENT ENT term
Rule 19    term -> ENT
Rule 20    term -> STRING
Rule 21    term -> NUM
Rule 22    rule -> IF logalg2 THEN conj2
Rule 23    logalg2 -> fact3 more2
Rule 24    logalg -> fact2 more
Rule 25    more -> op fact2 more
Rule 26    more2 -> op2 fact3 more2
Rule 27    more -> <empty>
Rule 28    more2 -> <empty>
Rule 29    op -> AND
Rule 30    op -> OR
Rule 31    op2 -> AND
Rule 32    op2 -> OR
Rule 33    conj2 -> fact3 moreconj2
Rule 34    moreconj2 -> AND fact3 moreconj2
Rule 35    moreconj2 -> <empty>
Rule 36    fact2 -> el el el
Rule 37    fact2 -> el el
Rule 38    fact3 -> el el el
Rule 39    el -> ENT
Rule 40    el -> NOT ENT
Rule 41    el -> VAR

Terminals, with rules where they appear

ADD                  : 2
AND                  : 29 31 34
CHECK                : 7 9 10 11
DELETE               : 3 4
DISPLAY              : 8
ENT                  : 14 14 14 15 15 15 16 16 16 17 17 17 18 18 19 39 40
IF                   : 22
LINKS                : 10
NODES                : 11
NOT                  : 15 16 17 40
NUM                  : 5 21
OR                   : 30 32
RULES                : 4 9
STRING               : 20
THEN                 : 22
VAR                  : 41
error                : 

Nonterminals, with rules where they appear

calc                 : 0
conj2                : 22
el                   : 36 36 36 37 37 38 38 38
exp                  : 1
fact                 : 12
fact2                : 3 24 25
fact3                : 23 26 33 34
logalg               : 7 8
logalg2              : 22
modify               : 2
more                 : 24 25
more2                : 23 26
moreconj2            : 33 34
numlist              : 4 5
op                   : 25
op2                  : 26
rule                 : 13
term                 : 18

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . exp
    (2) exp -> . ADD modify
    (3) exp -> . DELETE fact2
    (4) exp -> . DELETE RULES numlist
    (7) exp -> . CHECK logalg
    (8) exp -> . DISPLAY logalg
    (9) exp -> . CHECK RULES
    (10) exp -> . CHECK LINKS
    (11) exp -> . CHECK NODES

    ADD             shift and go to state 3
    DELETE          shift and go to state 4
    CHECK           shift and go to state 5
    DISPLAY         shift and go to state 6

    calc                           shift and go to state 1
    exp                            shift and go to state 2

state 1

    (0) S' -> calc .



state 2

    (1) calc -> exp .

    $end            reduce using rule 1 (calc -> exp .)


state 3

    (2) exp -> ADD . modify
    (12) modify -> . fact
    (13) modify -> . rule
    (14) fact -> . ENT ENT ENT
    (15) fact -> . NOT ENT ENT ENT
    (16) fact -> . ENT NOT ENT ENT
    (17) fact -> . ENT ENT NOT ENT
    (18) fact -> . ENT ENT term
    (22) rule -> . IF logalg2 THEN conj2

    ENT             shift and go to state 10
    NOT             shift and go to state 11
    IF              shift and go to state 12

    modify                         shift and go to state 7
    fact                           shift and go to state 8
    rule                           shift and go to state 9

state 4

    (3) exp -> DELETE . fact2
    (4) exp -> DELETE . RULES numlist
    (36) fact2 -> . el el el
    (37) fact2 -> . el el
    (39) el -> . ENT
    (40) el -> . NOT ENT
    (41) el -> . VAR

    RULES           shift and go to state 14
    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    fact2                          shift and go to state 13
    el                             shift and go to state 15

state 5

    (7) exp -> CHECK . logalg
    (9) exp -> CHECK . RULES
    (10) exp -> CHECK . LINKS
    (11) exp -> CHECK . NODES
    (24) logalg -> . fact2 more
    (36) fact2 -> . el el el
    (37) fact2 -> . el el
    (39) el -> . ENT
    (40) el -> . NOT ENT
    (41) el -> . VAR

    RULES           shift and go to state 20
    LINKS           shift and go to state 21
    NODES           shift and go to state 22
    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    logalg                         shift and go to state 19
    fact2                          shift and go to state 23
    el                             shift and go to state 15

state 6

    (8) exp -> DISPLAY . logalg
    (24) logalg -> . fact2 more
    (36) fact2 -> . el el el
    (37) fact2 -> . el el
    (39) el -> . ENT
    (40) el -> . NOT ENT
    (41) el -> . VAR

    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    logalg                         shift and go to state 24
    fact2                          shift and go to state 23
    el                             shift and go to state 15

state 7

    (2) exp -> ADD modify .

    $end            reduce using rule 2 (exp -> ADD modify .)


state 8

    (12) modify -> fact .

    $end            reduce using rule 12 (modify -> fact .)


state 9

    (13) modify -> rule .

    $end            reduce using rule 13 (modify -> rule .)


state 10

    (14) fact -> ENT . ENT ENT
    (16) fact -> ENT . NOT ENT ENT
    (17) fact -> ENT . ENT NOT ENT
    (18) fact -> ENT . ENT term

    ENT             shift and go to state 25
    NOT             shift and go to state 26


state 11

    (15) fact -> NOT . ENT ENT ENT

    ENT             shift and go to state 27


state 12

    (22) rule -> IF . logalg2 THEN conj2
    (23) logalg2 -> . fact3 more2
    (38) fact3 -> . el el el
    (39) el -> . ENT
    (40) el -> . NOT ENT
    (41) el -> . VAR

    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    logalg2                        shift and go to state 28
    fact3                          shift and go to state 29
    el                             shift and go to state 30

state 13

    (3) exp -> DELETE fact2 .

    $end            reduce using rule 3 (exp -> DELETE fact2 .)


state 14

    (4) exp -> DELETE RULES . numlist
    (5) numlist -> . NUM numlist
    (6) numlist -> .

    NUM             shift and go to state 32
    $end            reduce using rule 6 (numlist -> .)

    numlist                        shift and go to state 31

state 15

    (36) fact2 -> el . el el
    (37) fact2 -> el . el
    (39) el -> . ENT
    (40) el -> . NOT ENT
    (41) el -> . VAR

    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    el                             shift and go to state 33

state 16

    (39) el -> ENT .

    ENT             reduce using rule 39 (el -> ENT .)
    NOT             reduce using rule 39 (el -> ENT .)
    VAR             reduce using rule 39 (el -> ENT .)
    $end            reduce using rule 39 (el -> ENT .)
    AND             reduce using rule 39 (el -> ENT .)
    OR              reduce using rule 39 (el -> ENT .)
    THEN            reduce using rule 39 (el -> ENT .)


state 17

    (40) el -> NOT . ENT

    ENT             shift and go to state 34


state 18

    (41) el -> VAR .

    ENT             reduce using rule 41 (el -> VAR .)
    NOT             reduce using rule 41 (el -> VAR .)
    VAR             reduce using rule 41 (el -> VAR .)
    $end            reduce using rule 41 (el -> VAR .)
    AND             reduce using rule 41 (el -> VAR .)
    OR              reduce using rule 41 (el -> VAR .)
    THEN            reduce using rule 41 (el -> VAR .)


state 19

    (7) exp -> CHECK logalg .

    $end            reduce using rule 7 (exp -> CHECK logalg .)


state 20

    (9) exp -> CHECK RULES .

    $end            reduce using rule 9 (exp -> CHECK RULES .)


state 21

    (10) exp -> CHECK LINKS .

    $end            reduce using rule 10 (exp -> CHECK LINKS .)


state 22

    (11) exp -> CHECK NODES .

    $end            reduce using rule 11 (exp -> CHECK NODES .)


state 23

    (24) logalg -> fact2 . more
    (25) more -> . op fact2 more
    (27) more -> .
    (29) op -> . AND
    (30) op -> . OR

    $end            reduce using rule 27 (more -> .)
    AND             shift and go to state 37
    OR              shift and go to state 38

    more                           shift and go to state 35
    op                             shift and go to state 36

state 24

    (8) exp -> DISPLAY logalg .

    $end            reduce using rule 8 (exp -> DISPLAY logalg .)


state 25

    (14) fact -> ENT ENT . ENT
    (17) fact -> ENT ENT . NOT ENT
    (18) fact -> ENT ENT . term
    (19) term -> . ENT
    (20) term -> . STRING
    (21) term -> . NUM

    ENT             shift and go to state 39
    NOT             shift and go to state 40
    STRING          shift and go to state 42
    NUM             shift and go to state 43

    term                           shift and go to state 41

state 26

    (16) fact -> ENT NOT . ENT ENT

    ENT             shift and go to state 44


state 27

    (15) fact -> NOT ENT . ENT ENT

    ENT             shift and go to state 45


state 28

    (22) rule -> IF logalg2 . THEN conj2

    THEN            shift and go to state 46


state 29

    (23) logalg2 -> fact3 . more2
    (26) more2 -> . op2 fact3 more2
    (28) more2 -> .
    (31) op2 -> . AND
    (32) op2 -> . OR

    THEN            reduce using rule 28 (more2 -> .)
    AND             shift and go to state 49
    OR              shift and go to state 50

    more2                          shift and go to state 47
    op2                            shift and go to state 48

state 30

    (38) fact3 -> el . el el
    (39) el -> . ENT
    (40) el -> . NOT ENT
    (41) el -> . VAR

    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    el                             shift and go to state 51

state 31

    (4) exp -> DELETE RULES numlist .

    $end            reduce using rule 4 (exp -> DELETE RULES numlist .)


state 32

    (5) numlist -> NUM . numlist
    (5) numlist -> . NUM numlist
    (6) numlist -> .

    NUM             shift and go to state 32
    $end            reduce using rule 6 (numlist -> .)

    numlist                        shift and go to state 52

state 33

    (36) fact2 -> el el . el
    (37) fact2 -> el el .
    (39) el -> . ENT
    (40) el -> . NOT ENT
    (41) el -> . VAR

    $end            reduce using rule 37 (fact2 -> el el .)
    AND             reduce using rule 37 (fact2 -> el el .)
    OR              reduce using rule 37 (fact2 -> el el .)
    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    el                             shift and go to state 53

state 34

    (40) el -> NOT ENT .

    ENT             reduce using rule 40 (el -> NOT ENT .)
    NOT             reduce using rule 40 (el -> NOT ENT .)
    VAR             reduce using rule 40 (el -> NOT ENT .)
    $end            reduce using rule 40 (el -> NOT ENT .)
    AND             reduce using rule 40 (el -> NOT ENT .)
    OR              reduce using rule 40 (el -> NOT ENT .)
    THEN            reduce using rule 40 (el -> NOT ENT .)


state 35

    (24) logalg -> fact2 more .

    $end            reduce using rule 24 (logalg -> fact2 more .)


state 36

    (25) more -> op . fact2 more
    (36) fact2 -> . el el el
    (37) fact2 -> . el el
    (39) el -> . ENT
    (40) el -> . NOT ENT
    (41) el -> . VAR

    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    fact2                          shift and go to state 54
    el                             shift and go to state 15

state 37

    (29) op -> AND .

    ENT             reduce using rule 29 (op -> AND .)
    NOT             reduce using rule 29 (op -> AND .)
    VAR             reduce using rule 29 (op -> AND .)


state 38

    (30) op -> OR .

    ENT             reduce using rule 30 (op -> OR .)
    NOT             reduce using rule 30 (op -> OR .)
    VAR             reduce using rule 30 (op -> OR .)


state 39

    (14) fact -> ENT ENT ENT .
    (19) term -> ENT .

  ! reduce/reduce conflict for $end resolved using rule 14 (fact -> ENT ENT ENT .)
    $end            reduce using rule 14 (fact -> ENT ENT ENT .)

  ! $end            [ reduce using rule 19 (term -> ENT .) ]


state 40

    (17) fact -> ENT ENT NOT . ENT

    ENT             shift and go to state 55


state 41

    (18) fact -> ENT ENT term .

    $end            reduce using rule 18 (fact -> ENT ENT term .)


state 42

    (20) term -> STRING .

    $end            reduce using rule 20 (term -> STRING .)


state 43

    (21) term -> NUM .

    $end            reduce using rule 21 (term -> NUM .)


state 44

    (16) fact -> ENT NOT ENT . ENT

    ENT             shift and go to state 56


state 45

    (15) fact -> NOT ENT ENT . ENT

    ENT             shift and go to state 57


state 46

    (22) rule -> IF logalg2 THEN . conj2
    (33) conj2 -> . fact3 moreconj2
    (38) fact3 -> . el el el
    (39) el -> . ENT
    (40) el -> . NOT ENT
    (41) el -> . VAR

    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    conj2                          shift and go to state 58
    fact3                          shift and go to state 59
    el                             shift and go to state 30

state 47

    (23) logalg2 -> fact3 more2 .

    THEN            reduce using rule 23 (logalg2 -> fact3 more2 .)


state 48

    (26) more2 -> op2 . fact3 more2
    (38) fact3 -> . el el el
    (39) el -> . ENT
    (40) el -> . NOT ENT
    (41) el -> . VAR

    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    fact3                          shift and go to state 60
    el                             shift and go to state 30

state 49

    (31) op2 -> AND .

    ENT             reduce using rule 31 (op2 -> AND .)
    NOT             reduce using rule 31 (op2 -> AND .)
    VAR             reduce using rule 31 (op2 -> AND .)


state 50

    (32) op2 -> OR .

    ENT             reduce using rule 32 (op2 -> OR .)
    NOT             reduce using rule 32 (op2 -> OR .)
    VAR             reduce using rule 32 (op2 -> OR .)


state 51

    (38) fact3 -> el el . el
    (39) el -> . ENT
    (40) el -> . NOT ENT
    (41) el -> . VAR

    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    el                             shift and go to state 61

state 52

    (5) numlist -> NUM numlist .

    $end            reduce using rule 5 (numlist -> NUM numlist .)


state 53

    (36) fact2 -> el el el .

    $end            reduce using rule 36 (fact2 -> el el el .)
    AND             reduce using rule 36 (fact2 -> el el el .)
    OR              reduce using rule 36 (fact2 -> el el el .)


state 54

    (25) more -> op fact2 . more
    (25) more -> . op fact2 more
    (27) more -> .
    (29) op -> . AND
    (30) op -> . OR

    $end            reduce using rule 27 (more -> .)
    AND             shift and go to state 37
    OR              shift and go to state 38

    op                             shift and go to state 36
    more                           shift and go to state 62

state 55

    (17) fact -> ENT ENT NOT ENT .

    $end            reduce using rule 17 (fact -> ENT ENT NOT ENT .)


state 56

    (16) fact -> ENT NOT ENT ENT .

    $end            reduce using rule 16 (fact -> ENT NOT ENT ENT .)


state 57

    (15) fact -> NOT ENT ENT ENT .

    $end            reduce using rule 15 (fact -> NOT ENT ENT ENT .)


state 58

    (22) rule -> IF logalg2 THEN conj2 .

    $end            reduce using rule 22 (rule -> IF logalg2 THEN conj2 .)


state 59

    (33) conj2 -> fact3 . moreconj2
    (34) moreconj2 -> . AND fact3 moreconj2
    (35) moreconj2 -> .

    AND             shift and go to state 64
    $end            reduce using rule 35 (moreconj2 -> .)

    moreconj2                      shift and go to state 63

state 60

    (26) more2 -> op2 fact3 . more2
    (26) more2 -> . op2 fact3 more2
    (28) more2 -> .
    (31) op2 -> . AND
    (32) op2 -> . OR

    THEN            reduce using rule 28 (more2 -> .)
    AND             shift and go to state 49
    OR              shift and go to state 50

    op2                            shift and go to state 48
    more2                          shift and go to state 65

state 61

    (38) fact3 -> el el el .

    AND             reduce using rule 38 (fact3 -> el el el .)
    OR              reduce using rule 38 (fact3 -> el el el .)
    THEN            reduce using rule 38 (fact3 -> el el el .)
    $end            reduce using rule 38 (fact3 -> el el el .)


state 62

    (25) more -> op fact2 more .

    $end            reduce using rule 25 (more -> op fact2 more .)


state 63

    (33) conj2 -> fact3 moreconj2 .

    $end            reduce using rule 33 (conj2 -> fact3 moreconj2 .)


state 64

    (34) moreconj2 -> AND . fact3 moreconj2
    (38) fact3 -> . el el el
    (39) el -> . ENT
    (40) el -> . NOT ENT
    (41) el -> . VAR

    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    fact3                          shift and go to state 66
    el                             shift and go to state 30

state 65

    (26) more2 -> op2 fact3 more2 .

    THEN            reduce using rule 26 (more2 -> op2 fact3 more2 .)


state 66

    (34) moreconj2 -> AND fact3 . moreconj2
    (34) moreconj2 -> . AND fact3 moreconj2
    (35) moreconj2 -> .

    AND             shift and go to state 64
    $end            reduce using rule 35 (moreconj2 -> .)

    moreconj2                      shift and go to state 67

state 67

    (34) moreconj2 -> AND fact3 moreconj2 .

    $end            reduce using rule 34 (moreconj2 -> AND fact3 moreconj2 .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: reduce/reduce conflict in state 39 resolved using rule (fact -> ENT ENT ENT)
WARNING: rejected rule (term -> ENT) in state 39
WARNING: Rule (term -> ENT) is never reduced
